// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar renders correctly 1`] = `
<div
  class="za-search-bar za-search-bar--round"
>
  <form
    action="#"
    class="za-search-bar__form"
  >
    <div
      class="za-search-bar__content"
    >
      <div
        class="za-search-bar__mock"
      >
        <div
          class="za-search-bar__mock__container"
        >
          <i
            class="za-icon za-icon-search za-icon--theme-default"
            prefixcls="za-icon"
            theme="default"
            type="search"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              viewBox="0 0 36 36"
              width="1em"
            >
              <g
                fill="none"
                fill-rule="evenodd"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2.6"
              >
                <path
                  d="M34.045 30.935l-3.1 3.1-7.957-7.958 3.15-3.049z"
                />
                <path
                  d="M15.146 1.96c7.281 0 13.185 5.904 13.185 13.186 0 7.283-5.904 13.185-13.185 13.185-7.283 0-13.187-5.902-13.187-13.185C1.96 7.864 7.865 1.96 15.146 1.96z"
                />
              </g>
            </svg>
          </i>
          <span
            class="za-search-bar__mock__placeholder"
            style="visibility:visible"
          >
            搜索
          </span>
        </div>
      </div>
      <div
        class="za-input za-search-bar__input za-input--clearable"
      >
        <input
          autocomplete="off"
          placeholder="搜索"
          type="search"
          value=""
        />
        <i
          class="za-icon za-input__clear za-icon-wrong-round-fill za-icon--theme-default"
          prefixcls="za-icon"
          theme="default"
          type="wrong-round-fill"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            viewBox="0 0 37 37"
            width="1em"
          >
            <g
              fill="none"
              fill-rule="evenodd"
              stroke="none"
              stroke-width="2.6"
            >
              <path
                d="M35 18.5C35 27.613 27.613 35 18.5 35S2 27.613 2 18.5 9.387 2 18.5 2 35 9.387 35 18.5z"
                fill="currentColor"
                stroke="currentColor"
              />
              <path
                d="M13 13l11 11m0-11L13 24"
                stroke="#FFF"
              />
            </g>
          </svg>
        </i>
      </div>
    </div>
    <div
      class="za-search-bar__cancel"
    >
      取消
    </div>
  </form>
</div>
`;

exports[`SearchBar renders defaultValue correctly 1`] = `
<ForwardRef(forwardRef)
  cancelText="取消取消"
  defaultValue="搜索关键字"
  placeholder="搜索"
  shape="round"
>
  <LocaleReceiver
    cancelText="取消取消"
    defaultValue="搜索关键字"
    forwardedRef={null}
    placeholder="搜索"
    shape="round"
  >
    <SearchBar
      cancelText="取消取消"
      clearable={true}
      defaultValue="搜索关键字"
      disabled={false}
      locale={
        Object {
          "cancelText": "取消",
          "placeholder": "搜索",
        }
      }
      localeCode="zh-cn"
      placeholder="搜索"
      prefixCls="za-search-bar"
      shape="round"
      showCancel={false}
    >
      <div
        className="za-search-bar za-search-bar--round"
      >
        <form
          action="#"
          className="za-search-bar__form"
          onSubmit={[Function]}
        >
          <div
            className="za-search-bar__content"
          >
            <div
              className="za-search-bar__mock"
            >
              <div
                className="za-search-bar__mock__container"
              >
                <Icon
                  type="search"
                >
                  <i
                    className="za-icon za-icon-search za-icon--theme-default"
                    prefixcls="za-icon"
                    style={Object {}}
                    theme="default"
                    type="search"
                  >
                    <SvgSearch>
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        viewBox="0 0 36 36"
                        width="1em"
                      >
                        <g
                          fill="none"
                          fillRule="evenodd"
                          stroke="currentColor"
                          strokeLinecap="round"
                          strokeLinejoin="round"
                          strokeWidth={2.6}
                        >
                          <path
                            d="M34.045 30.935l-3.1 3.1-7.957-7.958 3.15-3.049z"
                          />
                          <path
                            d="M15.146 1.96c7.281 0 13.185 5.904 13.185 13.186 0 7.283-5.904 13.185-13.185 13.185-7.283 0-13.187-5.902-13.187-13.185C1.96 7.864 7.865 1.96 15.146 1.96z"
                          />
                        </g>
                      </svg>
                    </SvgSearch>
                  </i>
                </Icon>
                <span
                  className="za-search-bar__mock__placeholder"
                  style={
                    Object {
                      "visibility": "visible",
                    }
                  }
                >
                  搜索
                </span>
              </div>
            </div>
            <InputBase
              className="za-search-bar__input"
              clearable={true}
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              onClear={[Function]}
              onCompositionEnd={[Function]}
              onCompositionStart={[Function]}
              onCompositionUpdate={[Function]}
              onFocus={[Function]}
              placeholder="搜索"
              prefixCls="za-input"
              readOnly={false}
              type="search"
              value=""
            >
              <div
                className="za-input za-search-bar__input za-input--clearable"
              >
                <input
                  autoComplete="off"
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onCompositionEnd={[Function]}
                  onCompositionStart={[Function]}
                  onCompositionUpdate={[Function]}
                  onFocus={[Function]}
                  placeholder="搜索"
                  type="search"
                  value=""
                />
                <Icon
                  className="za-input__clear"
                  onClick={[Function]}
                  type="wrong-round-fill"
                >
                  <i
                    className="za-icon za-input__clear za-icon-wrong-round-fill za-icon--theme-default"
                    onClick={[Function]}
                    prefixcls="za-icon"
                    style={Object {}}
                    theme="default"
                    type="wrong-round-fill"
                  >
                    <SvgWrongRoundFill>
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        viewBox="0 0 37 37"
                        width="1em"
                      >
                        <g
                          fill="none"
                          fillRule="evenodd"
                          stroke="none"
                          strokeWidth={2.6}
                        >
                          <path
                            d="M35 18.5C35 27.613 27.613 35 18.5 35S2 27.613 2 18.5 9.387 2 18.5 2 35 9.387 35 18.5z"
                            fill="currentColor"
                            stroke="currentColor"
                          />
                          <path
                            d="M13 13l11 11m0-11L13 24"
                            stroke="#FFF"
                          />
                        </g>
                      </svg>
                    </SvgWrongRoundFill>
                  </i>
                </Icon>
              </div>
            </InputBase>
          </div>
          <div
            className="za-search-bar__cancel"
            onClick={[Function]}
          >
            取消取消
          </div>
        </form>
      </div>
    </SearchBar>
  </LocaleReceiver>
</ForwardRef(forwardRef)>
`;

exports[`SearchBar renders onCancel called correctly 1`] = `
<ForwardRef(forwardRef)
  onCancel={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  placeholder="搜索"
  shape="round"
>
  <LocaleReceiver
    forwardedRef={null}
    onCancel={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    placeholder="搜索"
    shape="round"
  >
    <SearchBar
      clearable={true}
      disabled={false}
      locale={
        Object {
          "cancelText": "取消",
          "placeholder": "搜索",
        }
      }
      localeCode="zh-cn"
      onCancel={
        [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": undefined,
            },
          ],
        }
      }
      placeholder="搜索"
      prefixCls="za-search-bar"
      shape="round"
      showCancel={false}
    >
      <div
        className="za-search-bar za-search-bar--round"
      >
        <form
          action="#"
          className="za-search-bar__form"
          onSubmit={[Function]}
        >
          <div
            className="za-search-bar__content"
          >
            <div
              className="za-search-bar__mock"
            >
              <div
                className="za-search-bar__mock__container"
              >
                <Icon
                  type="search"
                >
                  <i
                    className="za-icon za-icon-search za-icon--theme-default"
                    prefixcls="za-icon"
                    style={Object {}}
                    theme="default"
                    type="search"
                  >
                    <SvgSearch>
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        viewBox="0 0 36 36"
                        width="1em"
                      >
                        <g
                          fill="none"
                          fillRule="evenodd"
                          stroke="currentColor"
                          strokeLinecap="round"
                          strokeLinejoin="round"
                          strokeWidth={2.6}
                        >
                          <path
                            d="M34.045 30.935l-3.1 3.1-7.957-7.958 3.15-3.049z"
                          />
                          <path
                            d="M15.146 1.96c7.281 0 13.185 5.904 13.185 13.186 0 7.283-5.904 13.185-13.185 13.185-7.283 0-13.187-5.902-13.187-13.185C1.96 7.864 7.865 1.96 15.146 1.96z"
                          />
                        </g>
                      </svg>
                    </SvgSearch>
                  </i>
                </Icon>
                <span
                  className="za-search-bar__mock__placeholder"
                  style={
                    Object {
                      "visibility": "visible",
                    }
                  }
                >
                  搜索
                </span>
              </div>
            </div>
            <InputBase
              className="za-search-bar__input"
              clearable={true}
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              onClear={[Function]}
              onCompositionEnd={[Function]}
              onCompositionStart={[Function]}
              onCompositionUpdate={[Function]}
              onFocus={[Function]}
              placeholder="搜索"
              prefixCls="za-input"
              readOnly={false}
              type="search"
              value=""
            >
              <div
                className="za-input za-search-bar__input za-input--focus za-input--clearable"
              >
                <input
                  autoComplete="off"
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onCompositionEnd={[Function]}
                  onCompositionStart={[Function]}
                  onCompositionUpdate={[Function]}
                  onFocus={[Function]}
                  placeholder="搜索"
                  type="search"
                  value=""
                />
                <Icon
                  className="za-input__clear"
                  onClick={[Function]}
                  type="wrong-round-fill"
                >
                  <i
                    className="za-icon za-input__clear za-icon-wrong-round-fill za-icon--theme-default"
                    onClick={[Function]}
                    prefixcls="za-icon"
                    style={Object {}}
                    theme="default"
                    type="wrong-round-fill"
                  >
                    <SvgWrongRoundFill>
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        viewBox="0 0 37 37"
                        width="1em"
                      >
                        <g
                          fill="none"
                          fillRule="evenodd"
                          stroke="none"
                          strokeWidth={2.6}
                        >
                          <path
                            d="M35 18.5C35 27.613 27.613 35 18.5 35S2 27.613 2 18.5 9.387 2 18.5 2 35 9.387 35 18.5z"
                            fill="currentColor"
                            stroke="currentColor"
                          />
                          <path
                            d="M13 13l11 11m0-11L13 24"
                            stroke="#FFF"
                          />
                        </g>
                      </svg>
                    </SvgWrongRoundFill>
                  </i>
                </Icon>
              </div>
            </InputBase>
          </div>
          <div
            className="za-search-bar__cancel"
            onClick={[Function]}
          >
            取消
          </div>
        </form>
      </div>
    </SearchBar>
  </LocaleReceiver>
</ForwardRef(forwardRef)>
`;

exports[`SearchBar renders onChange called correctly 1`] = `
<ForwardRef(forwardRef)
  onChange={
    [MockFunction] {
      "calls": Array [
        Array [
          "测试值",
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  placeholder="搜索"
  shape="round"
>
  <LocaleReceiver
    forwardedRef={null}
    onChange={
      [MockFunction] {
        "calls": Array [
          Array [
            "测试值",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    placeholder="搜索"
    shape="round"
  >
    <SearchBar
      clearable={true}
      disabled={false}
      locale={
        Object {
          "cancelText": "取消",
          "placeholder": "搜索",
        }
      }
      localeCode="zh-cn"
      onChange={
        [MockFunction] {
          "calls": Array [
            Array [
              "测试值",
            ],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": undefined,
            },
          ],
        }
      }
      placeholder="搜索"
      prefixCls="za-search-bar"
      shape="round"
      showCancel={false}
    >
      <div
        className="za-search-bar za-search-bar--round za-search-bar--focus"
      >
        <form
          action="#"
          className="za-search-bar__form"
          onSubmit={[Function]}
        >
          <div
            className="za-search-bar__content"
          >
            <div
              className="za-search-bar__mock"
            >
              <div
                className="za-search-bar__mock__container"
              >
                <Icon
                  type="search"
                >
                  <i
                    className="za-icon za-icon-search za-icon--theme-default"
                    prefixcls="za-icon"
                    style={Object {}}
                    theme="default"
                    type="search"
                  >
                    <SvgSearch>
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        viewBox="0 0 36 36"
                        width="1em"
                      >
                        <g
                          fill="none"
                          fillRule="evenodd"
                          stroke="currentColor"
                          strokeLinecap="round"
                          strokeLinejoin="round"
                          strokeWidth={2.6}
                        >
                          <path
                            d="M34.045 30.935l-3.1 3.1-7.957-7.958 3.15-3.049z"
                          />
                          <path
                            d="M15.146 1.96c7.281 0 13.185 5.904 13.185 13.186 0 7.283-5.904 13.185-13.185 13.185-7.283 0-13.187-5.902-13.187-13.185C1.96 7.864 7.865 1.96 15.146 1.96z"
                          />
                        </g>
                      </svg>
                    </SvgSearch>
                  </i>
                </Icon>
                <span
                  className="za-search-bar__mock__placeholder"
                  style={
                    Object {
                      "visibility": "hidden",
                    }
                  }
                >
                  搜索
                </span>
              </div>
            </div>
            <InputBase
              className="za-search-bar__input"
              clearable={true}
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              onClear={[Function]}
              onCompositionEnd={[Function]}
              onCompositionStart={[Function]}
              onCompositionUpdate={[Function]}
              onFocus={[Function]}
              placeholder="搜索"
              prefixCls="za-input"
              readOnly={false}
              type="search"
              value="测试值"
            >
              <div
                className="za-input za-search-bar__input za-input--focus za-input--clearable"
              >
                <input
                  autoComplete="off"
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onCompositionEnd={[Function]}
                  onCompositionStart={[Function]}
                  onCompositionUpdate={[Function]}
                  onFocus={[Function]}
                  placeholder="搜索"
                  type="search"
                  value="测试值"
                />
                <Icon
                  className="za-input__clear za-input__clear--show"
                  onClick={[Function]}
                  type="wrong-round-fill"
                >
                  <i
                    className="za-icon za-input__clear za-input__clear--show za-icon-wrong-round-fill za-icon--theme-default"
                    onClick={[Function]}
                    prefixcls="za-icon"
                    style={Object {}}
                    theme="default"
                    type="wrong-round-fill"
                  >
                    <SvgWrongRoundFill>
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        viewBox="0 0 37 37"
                        width="1em"
                      >
                        <g
                          fill="none"
                          fillRule="evenodd"
                          stroke="none"
                          strokeWidth={2.6}
                        >
                          <path
                            d="M35 18.5C35 27.613 27.613 35 18.5 35S2 27.613 2 18.5 9.387 2 18.5 2 35 9.387 35 18.5z"
                            fill="currentColor"
                            stroke="currentColor"
                          />
                          <path
                            d="M13 13l11 11m0-11L13 24"
                            stroke="#FFF"
                          />
                        </g>
                      </svg>
                    </SvgWrongRoundFill>
                  </i>
                </Icon>
              </div>
            </InputBase>
          </div>
          <div
            className="za-search-bar__cancel za-search-bar__cancel--show"
            onClick={[Function]}
          >
            取消
          </div>
        </form>
      </div>
    </SearchBar>
  </LocaleReceiver>
</ForwardRef(forwardRef)>
`;

exports[`SearchBar renders onClear called correctly 1`] = `
<ForwardRef(forwardRef)
  onClear={
    [MockFunction] {
      "calls": Array [
        Array [
          "",
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
>
  <LocaleReceiver
    forwardedRef={null}
    onClear={
      [MockFunction] {
        "calls": Array [
          Array [
            "",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
  >
    <SearchBar
      clearable={true}
      disabled={false}
      locale={
        Object {
          "cancelText": "取消",
          "placeholder": "搜索",
        }
      }
      localeCode="zh-cn"
      onClear={
        [MockFunction] {
          "calls": Array [
            Array [
              "",
            ],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": undefined,
            },
          ],
        }
      }
      prefixCls="za-search-bar"
      shape="radius"
      showCancel={false}
    >
      <div
        className="za-search-bar za-search-bar--radius"
      >
        <form
          action="#"
          className="za-search-bar__form"
          onSubmit={[Function]}
        >
          <div
            className="za-search-bar__content"
          >
            <div
              className="za-search-bar__mock"
            >
              <div
                className="za-search-bar__mock__container"
              >
                <Icon
                  type="search"
                >
                  <i
                    className="za-icon za-icon-search za-icon--theme-default"
                    prefixcls="za-icon"
                    style={Object {}}
                    theme="default"
                    type="search"
                  >
                    <SvgSearch>
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        viewBox="0 0 36 36"
                        width="1em"
                      >
                        <g
                          fill="none"
                          fillRule="evenodd"
                          stroke="currentColor"
                          strokeLinecap="round"
                          strokeLinejoin="round"
                          strokeWidth={2.6}
                        >
                          <path
                            d="M34.045 30.935l-3.1 3.1-7.957-7.958 3.15-3.049z"
                          />
                          <path
                            d="M15.146 1.96c7.281 0 13.185 5.904 13.185 13.186 0 7.283-5.904 13.185-13.185 13.185-7.283 0-13.187-5.902-13.187-13.185C1.96 7.864 7.865 1.96 15.146 1.96z"
                          />
                        </g>
                      </svg>
                    </SvgSearch>
                  </i>
                </Icon>
                <span
                  className="za-search-bar__mock__placeholder"
                  style={
                    Object {
                      "visibility": "visible",
                    }
                  }
                >
                  搜索
                </span>
              </div>
            </div>
            <InputBase
              className="za-search-bar__input"
              clearable={true}
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              onClear={[Function]}
              onCompositionEnd={[Function]}
              onCompositionStart={[Function]}
              onCompositionUpdate={[Function]}
              onFocus={[Function]}
              placeholder="搜索"
              prefixCls="za-input"
              readOnly={false}
              type="search"
              value=""
            >
              <div
                className="za-input za-search-bar__input za-input--focus za-input--clearable"
              >
                <input
                  autoComplete="off"
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onCompositionEnd={[Function]}
                  onCompositionStart={[Function]}
                  onCompositionUpdate={[Function]}
                  onFocus={[Function]}
                  placeholder="搜索"
                  type="search"
                  value=""
                />
                <Icon
                  className="za-input__clear"
                  onClick={[Function]}
                  type="wrong-round-fill"
                >
                  <i
                    className="za-icon za-input__clear za-icon-wrong-round-fill za-icon--theme-default"
                    onClick={[Function]}
                    prefixcls="za-icon"
                    style={Object {}}
                    theme="default"
                    type="wrong-round-fill"
                  >
                    <SvgWrongRoundFill>
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        viewBox="0 0 37 37"
                        width="1em"
                      >
                        <g
                          fill="none"
                          fillRule="evenodd"
                          stroke="none"
                          strokeWidth={2.6}
                        >
                          <path
                            d="M35 18.5C35 27.613 27.613 35 18.5 35S2 27.613 2 18.5 9.387 2 18.5 2 35 9.387 35 18.5z"
                            fill="currentColor"
                            stroke="currentColor"
                          />
                          <path
                            d="M13 13l11 11m0-11L13 24"
                            stroke="#FFF"
                          />
                        </g>
                      </svg>
                    </SvgWrongRoundFill>
                  </i>
                </Icon>
              </div>
            </InputBase>
          </div>
          <div
            className="za-search-bar__cancel"
            onClick={[Function]}
          >
            取消
          </div>
        </form>
      </div>
    </SearchBar>
  </LocaleReceiver>
</ForwardRef(forwardRef)>
`;

exports[`SearchBar renders onFocus called correctly 1`] = `
<ForwardRef(forwardRef)
  onFocus={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  placeholder="搜索"
  shape="round"
>
  <LocaleReceiver
    forwardedRef={null}
    onFocus={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    placeholder="搜索"
    shape="round"
  >
    <SearchBar
      clearable={true}
      disabled={false}
      locale={
        Object {
          "cancelText": "取消",
          "placeholder": "搜索",
        }
      }
      localeCode="zh-cn"
      onFocus={
        [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": undefined,
            },
          ],
        }
      }
      placeholder="搜索"
      prefixCls="za-search-bar"
      shape="round"
      showCancel={false}
    >
      <div
        className="za-search-bar za-search-bar--round za-search-bar--focus"
      >
        <form
          action="#"
          className="za-search-bar__form"
          onSubmit={[Function]}
        >
          <div
            className="za-search-bar__content"
          >
            <div
              className="za-search-bar__mock"
            >
              <div
                className="za-search-bar__mock__container"
              >
                <Icon
                  type="search"
                >
                  <i
                    className="za-icon za-icon-search za-icon--theme-default"
                    prefixcls="za-icon"
                    style={Object {}}
                    theme="default"
                    type="search"
                  >
                    <SvgSearch>
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        viewBox="0 0 36 36"
                        width="1em"
                      >
                        <g
                          fill="none"
                          fillRule="evenodd"
                          stroke="currentColor"
                          strokeLinecap="round"
                          strokeLinejoin="round"
                          strokeWidth={2.6}
                        >
                          <path
                            d="M34.045 30.935l-3.1 3.1-7.957-7.958 3.15-3.049z"
                          />
                          <path
                            d="M15.146 1.96c7.281 0 13.185 5.904 13.185 13.186 0 7.283-5.904 13.185-13.185 13.185-7.283 0-13.187-5.902-13.187-13.185C1.96 7.864 7.865 1.96 15.146 1.96z"
                          />
                        </g>
                      </svg>
                    </SvgSearch>
                  </i>
                </Icon>
                <span
                  className="za-search-bar__mock__placeholder"
                  style={
                    Object {
                      "visibility": "visible",
                    }
                  }
                >
                  搜索
                </span>
              </div>
            </div>
            <InputBase
              className="za-search-bar__input"
              clearable={true}
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              onClear={[Function]}
              onCompositionEnd={[Function]}
              onCompositionStart={[Function]}
              onCompositionUpdate={[Function]}
              onFocus={[Function]}
              placeholder="搜索"
              prefixCls="za-input"
              readOnly={false}
              type="search"
              value=""
            >
              <div
                className="za-input za-search-bar__input za-input--focus za-input--clearable"
              >
                <input
                  autoComplete="off"
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onCompositionEnd={[Function]}
                  onCompositionStart={[Function]}
                  onCompositionUpdate={[Function]}
                  onFocus={[Function]}
                  placeholder="搜索"
                  type="search"
                  value=""
                />
                <Icon
                  className="za-input__clear"
                  onClick={[Function]}
                  type="wrong-round-fill"
                >
                  <i
                    className="za-icon za-input__clear za-icon-wrong-round-fill za-icon--theme-default"
                    onClick={[Function]}
                    prefixcls="za-icon"
                    style={Object {}}
                    theme="default"
                    type="wrong-round-fill"
                  >
                    <SvgWrongRoundFill>
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        viewBox="0 0 37 37"
                        width="1em"
                      >
                        <g
                          fill="none"
                          fillRule="evenodd"
                          stroke="none"
                          strokeWidth={2.6}
                        >
                          <path
                            d="M35 18.5C35 27.613 27.613 35 18.5 35S2 27.613 2 18.5 9.387 2 18.5 2 35 9.387 35 18.5z"
                            fill="currentColor"
                            stroke="currentColor"
                          />
                          <path
                            d="M13 13l11 11m0-11L13 24"
                            stroke="#FFF"
                          />
                        </g>
                      </svg>
                    </SvgWrongRoundFill>
                  </i>
                </Icon>
              </div>
            </InputBase>
          </div>
          <div
            className="za-search-bar__cancel za-search-bar__cancel--show"
            onClick={[Function]}
          >
            取消
          </div>
        </form>
      </div>
    </SearchBar>
  </LocaleReceiver>
</ForwardRef(forwardRef)>
`;

exports[`SearchBar renders onSubmit called correctly 1`] = `
<ForwardRef(forwardRef)
  onSubmit={
    [MockFunction] {
      "calls": Array [
        Array [
          "My new value",
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  placeholder="搜索"
  shape="round"
>
  <LocaleReceiver
    forwardedRef={null}
    onSubmit={
      [MockFunction] {
        "calls": Array [
          Array [
            "My new value",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    placeholder="搜索"
    shape="round"
  >
    <SearchBar
      clearable={true}
      disabled={false}
      locale={
        Object {
          "cancelText": "取消",
          "placeholder": "搜索",
        }
      }
      localeCode="zh-cn"
      onSubmit={
        [MockFunction] {
          "calls": Array [
            Array [
              "My new value",
            ],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": undefined,
            },
          ],
        }
      }
      placeholder="搜索"
      prefixCls="za-search-bar"
      shape="round"
      showCancel={false}
    >
      <div
        className="za-search-bar za-search-bar--round za-search-bar--focus"
      >
        <form
          action="#"
          className="za-search-bar__form"
          onSubmit={[Function]}
        >
          <div
            className="za-search-bar__content"
          >
            <div
              className="za-search-bar__mock"
            >
              <div
                className="za-search-bar__mock__container"
              >
                <Icon
                  type="search"
                >
                  <i
                    className="za-icon za-icon-search za-icon--theme-default"
                    prefixcls="za-icon"
                    style={Object {}}
                    theme="default"
                    type="search"
                  >
                    <SvgSearch>
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        viewBox="0 0 36 36"
                        width="1em"
                      >
                        <g
                          fill="none"
                          fillRule="evenodd"
                          stroke="currentColor"
                          strokeLinecap="round"
                          strokeLinejoin="round"
                          strokeWidth={2.6}
                        >
                          <path
                            d="M34.045 30.935l-3.1 3.1-7.957-7.958 3.15-3.049z"
                          />
                          <path
                            d="M15.146 1.96c7.281 0 13.185 5.904 13.185 13.186 0 7.283-5.904 13.185-13.185 13.185-7.283 0-13.187-5.902-13.187-13.185C1.96 7.864 7.865 1.96 15.146 1.96z"
                          />
                        </g>
                      </svg>
                    </SvgSearch>
                  </i>
                </Icon>
                <span
                  className="za-search-bar__mock__placeholder"
                  style={
                    Object {
                      "visibility": "hidden",
                    }
                  }
                >
                  搜索
                </span>
              </div>
            </div>
            <InputBase
              className="za-search-bar__input"
              clearable={true}
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              onClear={[Function]}
              onCompositionEnd={[Function]}
              onCompositionStart={[Function]}
              onCompositionUpdate={[Function]}
              onFocus={[Function]}
              placeholder="搜索"
              prefixCls="za-input"
              readOnly={false}
              type="search"
              value="My new value"
            >
              <div
                className="za-input za-search-bar__input za-input--focus za-input--clearable"
              >
                <input
                  autoComplete="off"
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onCompositionEnd={[Function]}
                  onCompositionStart={[Function]}
                  onCompositionUpdate={[Function]}
                  onFocus={[Function]}
                  placeholder="搜索"
                  type="search"
                  value="My new value"
                />
                <Icon
                  className="za-input__clear za-input__clear--show"
                  onClick={[Function]}
                  type="wrong-round-fill"
                >
                  <i
                    className="za-icon za-input__clear za-input__clear--show za-icon-wrong-round-fill za-icon--theme-default"
                    onClick={[Function]}
                    prefixcls="za-icon"
                    style={Object {}}
                    theme="default"
                    type="wrong-round-fill"
                  >
                    <SvgWrongRoundFill>
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        viewBox="0 0 37 37"
                        width="1em"
                      >
                        <g
                          fill="none"
                          fillRule="evenodd"
                          stroke="none"
                          strokeWidth={2.6}
                        >
                          <path
                            d="M35 18.5C35 27.613 27.613 35 18.5 35S2 27.613 2 18.5 9.387 2 18.5 2 35 9.387 35 18.5z"
                            fill="currentColor"
                            stroke="currentColor"
                          />
                          <path
                            d="M13 13l11 11m0-11L13 24"
                            stroke="#FFF"
                          />
                        </g>
                      </svg>
                    </SvgWrongRoundFill>
                  </i>
                </Icon>
              </div>
            </InputBase>
          </div>
          <div
            className="za-search-bar__cancel za-search-bar__cancel--show"
            onClick={[Function]}
          >
            取消
          </div>
        </form>
      </div>
    </SearchBar>
  </LocaleReceiver>
</ForwardRef(forwardRef)>
`;
